# dogai

./: CMakeLists.txt  README  README.md  URDF Viewer Example.url  fk_shower.py  frames.gv  package.xml
launch/: display.launch  dogai.launch.py  dogai_rviz.launch.py  gazebo.launch  ros_to_arduino.launch
meshes/: foreleg_fl.STL  leg_bl.STL  leg_fr.STL  shoulder_bl.STL  shoulder_fr.STL
rviz/: rviz_settings.rviz  urdf.rviz
scripts/: fk_shower.py  ros_to_arduino.py
solid_asm/dogai/: Foreleg.SLDPRT  body.SLDPRT  dogai.SLDASM  leg.SLDPRT  shoulder.SLDPRT  ~$body.SLDPRT
solid_urdf/: dogai.rar
solid_urdf/dogai/: CMakeLists.txt  package.xml
solid_urdf/dogai/config/: joint_names_dogai.yaml
solid_urdf/dogai/meshes/: body.STL  foreleg_bl.STL  foreleg_br.STL  foreleg_fr.STL  leg_bl.STL  leg_br.STL  leg_fl.STL  shoulder_br.STL  shoulder_fl.STL
solid_urdf/dogai/urdf/: dogai.csv  dogai.urdf
src/arduino_ros_firmware/: arduino_ros_firmware.ino
urdf/: dogai.csv  dogai.urdf
